--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,20 +2,18 @@
   <div class="row">
     <div class="col">
       <h1>Aplicacion de calculadora</h1>
-      <form action="">
-        <label>Operando A</label>
-        <br>
-        <input type="number" class="form-control" [(ngModel)]="numA" placeholder="Escribe el Operando A">
-        <br>
-        <label>Operando B</label>
-        <br>
-        <input type="number" class="form-control" [(ngModel)]="numB" placeholder="Escribe el Operando B">
-        <br>
-        <button class="btn btn-primary" (click)="suma()">Sumar</button>
-      </form>
+      <app-formulario
+        (resultadoSuma)="agregandoResultado($event)"
+      >
+
+      </app-formulario>
 
       <br>
-      <p>Resultado: <span *ngIf="resultado > 0">{{resultado}}</span></p>
+      <app-resultado
+        [resultadoHijo]="resultado"
+      >
+
+      </app-resultado>
     </div>
   </div>
 </div>
